kubernetes/apps/storage/minio/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: storage
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "minio.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: minio
          port: 9001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-s3
  namespace: storage
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "s3.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: minio
          port: 9000
